rgbds-0.6.1/test/asm/nested-brackets.err
error: nested-brackets.asm(5):
    Missing }
error: Assembly aborted (1 error)!
