rgbds-0.6.1/test/asm/nested-brackets.asm
STRING equs "OK"
WRAPPER equs "TRIN"
	PRINTLN "{S{WRAPPER}G}"

	PRINTLN "{S{WRAPPER}G"
